--- a/formAssignmentWithMediaQuerry/validHtmlForm.css
+++ b/formAssignmentWithMediaQuerry/validHtmlForm.css
@@ -8,6 +8,12 @@ body{
     margin: 0 auto;
     padding: 2em;
 }
+@media screen and (max-width: 992px) {
+    body {
+      width: 50%;
+    }
+  }
+
 .headContainer{
     display: flex;
     flex-flow: column wrap;
